--- a/index.html
+++ b/index.html
@@ -2,8 +2,140 @@
 <html>
   <head>
     <title>Music Makes Glasgow</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
-    <p>Some stuff about stuff</p>
+    <section class="bands_container">
+        <div class="band">
+            <p class="band__name">
+                Altered Images
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/07h7JMfYWswTq4qpinC5q4?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Amy Macdonald
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/1hJuGCUpefX24GFmss9bjH?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Biffy Clyro
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/1km0R7wy712AzLkA1WjKET?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Belle & Sebastian
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/4I2BJf80C0skQpp1sQmA0h?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Cocteau Twins
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/5Wabl1lPdNOeIn0SQ5A1mp?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                CHVRCHES
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/3CjlHNtplJyTf9npxaPl5w?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Frightened Rabbit
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/6fVcDUckTwxqg56qNsEvUr?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                The Fratellis
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/3M4ThdJR28z9eSMcQHAZ5G?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Glasvegas
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/478peoEkoKPsTgRiVzkvPl?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                The Jesus and Mary Chain
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/4rjlerN21ygkIhmUv55irs?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Life Without Buildings
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/16tbi6bWXBzJ9pOMZ5gIC7?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Mogwaii
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/34UhPkLbtFKRq3nmfFgejG?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Primal Scream
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/3wury2nd8idV4GecUg5xze?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                The Proclaimers
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/1A92IAcd7A6npCA33oGM5i?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                SOPHIE
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/5a2w2tgpLwv26BYJf2qYwu?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Twin Atlantic
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/4A9xtvezlouTD7H0kyUje9?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
