--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
         </div>
         <div class="band">
             <p class="band__name">
+                Dutch Wine
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/2lterJ2srgmRnUG7emTGaL?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
                 Frightened Rabbit
             </p>
             <div class="band__iframe">
@@ -126,6 +134,14 @@
             </p>
             <div class="band__iframe">
                 <iframe src="https://open.spotify.com/embed/artist/5a2w2tgpLwv26BYJf2qYwu?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <div class="band">
+            <p class="band__name">
+                Sulka
+            </p>
+            <div class="band__iframe">
+                <iframe src="https://open.spotify.com/embed/artist/4yM3FekW8xBLkjGmhiXDkp?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </div>
         <div class="band">
